# pgsh-hsh798-auto

./: .gitignore  README.md  pyproject.toml
configs/: accounts.example.json  pgsh_task_whitelist.json  pgsh_task_whitelist_confirmed.json
docs/: CLI_UPDATES_20260402.md  HSH798_NOTES.md  OUTPUTS.md  PGSH_NOTES.md  PLAN.md  REFERENCE_ANALYSIS.md  USAGE.md
skills/pgsh-daily-runner/: SKILL.md
skills/pgsh-daily-runner/agents/: openai.yaml
skills/pgsh-project-automation/: SKILL.md
skills/pgsh-project-automation/agents/: openai.yaml
skills/pgsh-project-automation/references/: openclaw-integration.md
src/: cli.py
src/adapters/hsh798/: client.py  runner.py
src/adapters/pgsh/: client.py  runner.py
src/core/: cli_support.py  models.py  output_sanitizer.py  storage.py
